# rspace-client-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Changelog.md  DEVELOPING.md  ExampleInstrumentData_1623075569806.csv  InstrumentDatav1.ipynb  InventoryUsage.md  README.md  SECURITY.md  datatables.ipynb  download_attachments.py  environment.yaml  forms.py  freezer.py  paging_through_results.py  pyproject.toml  release.sh  rspace_demo.ipynb  setup.py  status.py
.github/scripts/: get_rspace_api_key.py  warmup_sysadmin.py
.github/workflows/: ci-codeql-test.yml  codeql-analysis.yml  codeql-and-tests.yml  main.yml
docs/: usage-guide.md
examples/: create_document.py  create_folder_and_notebook.py  create_form.py  create_instrument.py  create_sample.py  download_attachments.py  export_records.py  freezer.py  get_activity.py  importWordFile.py  import_directory.py  import_inventory_csv.py  import_word_file.py  inventory_link_field.py  paging_through_results.py  paging_through_users.py  rspace_client  search_documents_by_form.py  shareDocuments.py  share_documents.py  simple_tree_importer.py  status.py  tree_upload.py
examples/resources/: 2017-05-10_1243111032_GT_DetailedTS_E.csv  2017-05-10_1670091041_CNVts.csv
jupyter/: rspace_demo.ipynb  temp_data.csv
jupyter_notebooks/: proteins.csv  provenance_jupyter_hub  provenance_jupyter_hub.ipynb  provenance_jupyter_lite  rspace-demo-kaggle-v11.ipynb  rspace_demo.ipynb  rspace_openai_chat.ipynb  samples_to_lom.ipynb
rspace_client/: __init__.py  advanced_query_builder.py  client.py  client_base.py  exceptions.py  field_content.py  fs_utils.py  inventory_client.py  utils.py  validators.py
rspace_client/eln/: advanced_query_builder.py  dcs.py  eln.py  field_content.py  filetree_importer.py  fs.py
rspace_client/inv/: attachment_fs.py  importer.py  inv.py  props.py  quantity_unit.py  sample_builder2.py  template_builder.py
rspace_client/notebook_sync/: links.md  notebook_sync_requirements.py  notebook_sync_requirements_r.py  sync_notebook.py
rspace_client/tests/: api_test.py  base_test.py  csvimport_test.py  eln_fs_test.py  elnapi_test.py  exceptions_test.py  field_content_test.py  grid_container_test.py  id_test.py  (+10 more)
(+9 files in other folders)
